# bot

./: .gitignore  AGENTS.md  AGENTS_pyright_batch_47_group_3.md  AGENT_WORK_LOG.md  README.md  Tasks.txt  agents.md  agnets.md  alembic.ini  alembic_migration_generatedquests_craftingrecipes.py  alembic_migration_location_updates.py  alembic_migration_pending_generations.py  alembic_migration_player_discord_id_not_null.py  alembic_migration_script.py  alembic_script_1_factions.py  alembic_script_2_relationships.py  conftest.py  coverage.xml  done.txt  inspect_pap.py  main.py  map_deps.py  memory.md  mypy_report.xml  output.txt  process_locations.py  pylint_report.json  pyproject.toml  pyright_errors.json  pyright_errors.txt  pyright_errors_part_1.txt  pyright_errors_part_2.txt  pyright_errors_part_3.txt  pyright_errors_part_4.txt  pyright_errors_part_5.txt  pyright_errors_part_6.txt  pyright_issues_errors.txt  pyright_report.json  pyright_summary.txt  pyright_summary_current.txt  (+9 more)
.history/: alembic_20250604205358.ini  alembic_20250605215944.ini  alembic_20250605222705.ini  alembic_20250605234551.ini  alembic_20250606011924.ini  alembic_20250606012239.ini  alembic_20250606012429.ini  alembic_20250606012644.ini  alembic_20250606012702.ini  alembic_20250606171659.ini  alembic_20250606171726.ini  alembic_20250606172653.ini  requaermants_20250606022212.txt  requirements_20250606021439.txt  requirements_20250606030506.txt  settings_20250519162510.json  test_db_service_20250606232649.py  test_postgres_connection_20250606232649.py  test_postgres_connection_20250607004522.py
app/: actions_logic.py  ai_services.py  config.py  crud.py  db.py  locations_manager.py  main.py  models.py  party_manager.py  player_manager.py  rules_engine.py  utils.py  world_state_manager.py
bot/: bot_core.py  test_imports.py
data/: event_templates.json  initial_world_data.json  (+4 more)
(+909 files in other folders)
