[tool.poetry]
name = "text-rpg-bot-backend"
version = "0.1.0"
description = "Backend for AI-Driven Text RPG Bot"
authors = ["Jules <jules@ai.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
discord = "^2.3.2"
SQLAlchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
openai = "^1.3.7"
asyncpg = "^0.29.0" # Added asyncpg
pydantic = "^2.5.0" # Added pydantic (example version, align with FastAPI if needed)
aiosqlite = "^0.19.0" # Added aiosqlite
python-dotenv = "^1.0.0" # Added python-dotenv
spacy = {version = ">=3.7.0,<3.8.0"} # Added spacy
httpx = "==0.27.0"
# For spacy models, they are often installed separately or via direct URL in requirements.txt
# Poetry can handle URL dependencies too if needed:
# en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"  # Or any recent, compatible version
pytest-asyncio = "^0.23.0" # Or any recent, compatible version
pytest-mock = "^3.12.0" # Added pytest-mock
pyright = "^1.1.402"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
